# project_1

./: .gitignore  CMakeLists.txt  hello.cpp
.github/workflows/: cmake.yml
resources/: tile-1.psp
source/: .travis.yml  hello.cpp
source/view/: animatedSprite.cpp  animatedSprite.hpp  screenView.cpp  screenView.hpp  squareView.cpp  squareView.hpp  view.cpp  view.hpp
source/view/util/: spriteSheetManager.cpp  spriteSheetManager.hpp
